tests/ui/traits/inherited-copy-bound.stderr
error[E0277]: the trait bound `Box<{integer}>: Foo` is not satisfied
  --> $DIR/inherited-copy-bound.rs:15:16
   |
LL |     take_param(&x);
   |     ---------- ^^ the trait `Copy` is not implemented for `Box<{integer}>`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `Box<{integer}>` to implement `Foo`
  --> $DIR/inherited-copy-bound.rs:9:15
   |
LL | impl<T: Copy> Foo for T {}
   |         ----  ^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `take_param`
  --> $DIR/inherited-copy-bound.rs:11:18
   |
LL | fn take_param<T: Foo>(foo: &T) {}
   |                  ^^^ required by this bound in `take_param`

error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/inherited-copy-bound.rs:21:24
   |
LL |     let z = &x as &dyn Foo;
   |                        ^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/inherited-copy-bound.rs:5:12
   |
LL | trait Foo: Copy {
   |       ---  ^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0038, E0277.
For more information about an error, try `rustc --explain E0038`.
